<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 Shuhrat Dehkanov

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="never"
        android:disableDependentsState="true"
        android:title="@string/never_timeout"
        android:summaryOn="@string/never_timeout_summary"
        android:persistent="false" />

    <Preference
        android:key="custom"
        android:dependency="never"
        android:title="@string/custom_timeout"
        android:persistent="false" />

    <PreferenceCategory android:title="@string/options">

        <Preference
            android:key="default_timeout"
            android:title="@string/default_timeout"
            android:persistent="false" />
        
        <CheckBoxPreference
            android:key="plugged"
            android:title="@string/stay_on_while_plugged_in_title"
            android:summary="@string/stay_on_while_plugged_in_summary"
            android:persistent="false" />
    </PreferenceCategory>
</PreferenceScreen>
